--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,17 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <!-- google icon-font -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
+  <!-- bootstrap  -->
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" /> -->
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css">
+  
+  <!-- <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+  <!-- <script src="node_modules/jquery/dist/jquery.min.js "></script> -->
+  <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.js "></script> -->
 </head>
 <body>
   <app-root></app-root>
