--- a/src/index.html
+++ b/src/index.html
@@ -32,26 +32,31 @@
 
       var top = $(this).scrollTop();
 
-      var transparent = 1;
-      var bg_color = 'rgba(255, 255, 255, ' + transparent + ')';
-
       if (top < 430) {
-        elem_header.css({"opacity":top/430});
-        elem_menu_panel.css({"position":"inherit"});
-        elem_main_content.css({"margin-top":"0"});
+        elem_header.css({ "opacity": top / 430 });
+        if (elem_menu_panel) {
+          elem_menu_panel.css({ "position": "inherit" });
+        }
+        elem_main_content.css({ "margin-top": "0" });
       }
 
       $(window).scroll(function () {
-        elem_header.css({"opacity":top/430});
+        var elem_header = $('#zenit_header_background_80px');
+        var elem_menu_panel = $('#zenit_menu_panel_200px');
+        var elem_main_content = $('#zenit_content_below_menu_panel');
 
         top = $(this).scrollTop();
 
-        if (top >= 430) {
-          elem_menu_panel.css({"position":"fixed","top":"80px"});
-          elem_main_content.css({"margin-top":"200px"});
-        } else {
-          elem_menu_panel.css({"position":"inherit"});
-          elem_main_content.css({"margin-top":"0"});
+        elem_header.css({ "opacity": top / 430 });
+
+        if (elem_menu_panel.length > 0) {
+          if (top >= 430) {
+            elem_menu_panel.css({ "position": "fixed", "top": "80px" });
+            elem_main_content.css({ "margin-top": "200px" });
+          } else {
+            elem_menu_panel.css({ "position": "inherit" });
+            elem_main_content.css({ "margin-top": "0" });
+          }
         }
       });
 
