--- a/src/index.html
+++ b/src/index.html
@@ -18,50 +18,10 @@
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+  <!-- check device type -->
+  <script src="./assets/scripts/device.js"></script>
   <!-- stopping element on the top -->
-  <script>
-    // 80 px - 'header'
-    // 500px  'carousel'
-    // 10 px - space between 'carousel' and 'menu_panel'
-    // 200px - 'menu_panel'
-    // 10px - space between 'menu_panel' and 'zenit_content_below_menu_panel'
-    $(function () {
-      var elem_header = $('#zenit_header_background_80px');
-      var elem_menu_panel = $('#zenit_menu_panel_200px');
-      var elem_main_content = $('#zenit_content_below_menu_panel');
-
-      var top = $(this).scrollTop();
-
-      if (top < 430) {
-        elem_header.css({ "opacity": top / 430 });
-        if (elem_menu_panel) {
-          elem_menu_panel.css({ "position": "inherit" });
-        }
-        elem_main_content.css({ "margin-top": "0" });
-      }
-
-      $(window).scroll(function () {
-        var elem_header = $('#zenit_header_background_80px');
-        var elem_menu_panel = $('#zenit_menu_panel_200px');
-        var elem_main_content = $('#zenit_content_below_menu_panel');
-
-        top = $(this).scrollTop();
-
-        elem_header.css({ "opacity": top / 430 });
-
-        if (elem_menu_panel.length > 0) {
-          if (top >= 430) {
-            elem_menu_panel.css({ "position": "fixed", "top": "80px" });
-            elem_main_content.css({ "margin-top": "200px" });
-          } else {
-            elem_menu_panel.css({ "position": "inherit" });
-            elem_main_content.css({ "margin-top": "0" });
-          }
-        }
-      });
-
-    });
-  </script>
+  <script src="./assets/scripts/panel-position.js"></script>
 </head>
 
 <body>
